# wr-ai-manager

./: README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/features/: system-tray.md
docs/plans/: 2026-03-09-system-tray-design.md  2026-03-09-system-tray-implementation.md
src/: app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_manager.rs  lib.rs  main.rs  symlink_manager.rs  tray.rs
src-tauri/src/commands/: apply.rs  config.rs  library.rs  marketplace.rs  mod.rs  symlink.rs
src-tauri/src/models/: config.rs
src/components/: app-layout.test.tsx  app-layout.tsx  apply-group-dialog.tsx  create-group-dialog.tsx  delete-group-dialog.tsx  sync-dialog.tsx  theme-toggle.tsx
src/components/Sidebar/: ai-tools-section.tsx  config-group-section.tsx  index.tsx
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx
src/hooks/: use-is-dark-theme.ts  use-toast.ts
src/i18n/: index.ts
src/i18n/resources/: en-US.ts  zh-CN.ts
src/lib/: ai-tools.ts  marketplace.ts  name-badge.ts
src/pages/groups/: [group-id].tsx
src/pages/home/: index.tsx
src/pages/marketplace/: index.tsx
src/pages/settings/: index.tsx
src/routes/: index.tsx
src/stores/: app-store.test.ts  app-store.ts  index.ts  use-config-store.ts  use-settings-store.ts  use-theme-store.ts
src/test/: match-media.test.ts  setup.ts
src/types/: config.ts
(+1 files in other folders)
